--- a/public/index.html
+++ b/public/index.html
@@ -2,44 +2,35 @@
 <html lang="pl">
   <head>
     <meta charset="utf-8" />
-    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="./manifest.json" />
-    <link rel="stylesheet" href="./static/css/main.e6c13ad2.css">
-<title>Lokalny Bazarek</title>
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="description" content="Web site created using create-react-app" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Logo.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.e6c13ad2.css">
+    <title>Lokalny Bazarek</title>
+    <link rel="icon" href="%PUBLIC_URL%/Logo.png" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Open Graph Meta Tags for Social Media Integration -->
+    <meta property="og:title" content="Lokalny Bazarek" />
+    <meta property="og:description" content="Miejsce, gdzie łączymy się z lokalnymi rolnikami i producentami." />
+    <meta property="og:image" content="%PUBLIC_URL%/Logo.png" />
+    <meta property="og:url" content="https://lokalny-bazarek.info" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Lokalny Bazarek" />
+    <meta name="twitter:description" content="Miejsce, gdzie łączymy się z lokalnymi rolnikami i producentami." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/Logo.png" />
+
+    <!-- Additional Meta Tags for other social platforms -->
+    <!-- Add TikTok, Instagram or other platforms meta tags as needed -->
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Logo.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
