--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,15 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.e6c13ad2.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/static/css/main.e6c13ad2.css" />
     <title>Lokalny Bazarek</title>
-    <link rel="icon" href="%PUBLIC_URL%/Logo.png" />
+    
+    <!-- Favicon -->
+    <link rel="icon" href="%PUBLIC_URL%/Logo.png" type="image/png" />
 
     <!-- Open Graph Meta Tags for Social Media Integration -->
     <meta property="og:title" content="Lokalny Bazarek" />
-    <meta property="og:description" content="Miejsce, gdzie łączymy się z lokalnymi rolnikami i producentami." />
+    <meta property="og:description" content="Miejsce, gdzie łączymy się z lokalnymi rolnikami,producentami i rzemieslnikami" />
     <meta property="og:image" content="%PUBLIC_URL%/Logo.png" />
     <meta property="og:url" content="https://lokalny-bazarek.info" />
     <meta property="og:type" content="website" />
@@ -27,6 +29,7 @@
     <!-- Additional Meta Tags for other social platforms -->
     <!-- Add TikTok, Instagram or other platforms meta tags as needed -->
 
+    <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Logo.png" />
   </head>
   <body>
